--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,14 @@
 [tool.poetry]
-name = "Name"
+name = "YellowJacket"
 version = "0.1.0"
 description = ""
-authors = ["Author 1 <email@mail.com>"]
+authors = ["Davr", "chrisg", "saraansh", "TheAntiSnipe", "okimii"]
 license = "MIT"
 
 [tool.poetry.dependencies]
 python = "3.10.*"
+websockets = "^10.3"
+pymongo = "^4.2.0"
 
 [tool.poetry.dev-dependencies]
 # Base tools
