--- a/source/backend/Database/Dockerfile
+++ b/source/backend/Database/Dockerfile
@@ -1,9 +1,7 @@
 FROM python:3.10-alpine
 WORKDIR /code
-COPY ./requirements.txt /code/requirements.txt
+COPY requirements.txt /code/requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
-COPY ./source/backend /code/app
+COPY database.py /code/app/database.py
 EXPOSE 27017
-
-WORKDIR /code/app/Database
