Modified docker-compose and wrote a test file.

--- a/docker-compose.dbtesting.yaml
+++ b/docker-compose.dbtesting.yaml
@@ -6,7 +6,7 @@ services:
     environment:
       - USERNAME=codejam2022
       - PASSWORD=yellowjacket
-    command: python /code/app/database.py
+    command: python /code/app/db_testing.py
 
   database:
     image: mongo:latest
