--- a/source/backend/Database/Dockerfile
+++ b/source/backend/Database/Dockerfile
@@ -6,4 +6,5 @@ COPY requirements.txt /code/requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
 COPY database.py /code/app/database.py
+COPY db_testing.py /code/app/db_testing.py
 EXPOSE 27017
