--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,19 +1,25 @@
 version: "3"
 services:
-  # postgres:
-  #   image: postgres:11
-  #   ports:
-  #     - "5432:5432"
-  #   environment:
-  #     - POSTGRES_USER=postgres
-  #     - POSTGRES_PASSWORD=postgres
-  #     - POSTGRES_DB=postgres
+  database:
+    image: mongo:latest
+    container_name: "mongo"
+    environment:
+      - MONGO_INITDB_DATABASE=Yellowjacket
+      - MONGO_INITDB_ROOT_USERNAME=codejam2022
+      - MONGO_INITDB_ROOT_PASSWORD=yellowjacket
+    volumes:
+      - mongo:/data/db
+    command: --quiet --logpath /dev/null
+
   fastapi:
-    build: .
+    build: ./source/backend/
     volumes:
       - ./source/backend:/code/app:z
     command: uvicorn app.server:app --port 8000 --host 0.0.0.0 --reload
     ports:
       - 8000:8000
-    # depends_on:
-    #   - postgres
+    depends_on:
+      - database
+
+volumes:
+  mongo:
