--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -21,5 +21,13 @@ services:
     depends_on:
       - database
 
+  frontend:
+    build: ./source/frontend/
+    volumes:
+      - ./source/frontend:/usr/share/nginx/html:z
+    ports:
+      - 80:80
+
+
 volumes:
   mongo:
